[package]
name = "advent_of_code_2023"
version = "0.1.0"
authors = ["Christopher Luu <nuudles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
counter = "0.5.7"
itertools = "0.11.0"
pathfinding = "4.3.2"
cached = "0.46.1"
gcd = "2.3.0"
mod_exp = "1.0.1"
